# Gloux

./: CMakeLists.txt
include/gloux/: gloux.h  io.h  log.h  network.h  socket.h  utils.h
io/: glx_bytebuffer.cpp
network/linux/: glx_socket.cpp
tests/: bytebuffer_test.cpp  io_test.cpp  network_test.cpp  utils_test.cpp
