cmake_minimum_required(VERSION 3.24)
project(gloux)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS -pthread)
include_directories(include)
set(gloux-network-files)
set(gloux-io-files io/glx_bytebuffer.cpp include/gloux/io.h)
set(gloux-utils-files include/gloux/utils.h)
set(gloux-common-files include/gloux/log.h)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    set(gloux-network-files network/linux/glx_socket.cpp)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    set(gloux-network-files network/windows/glx_socket.cpp)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    message(STATUS "macos not supported yet")
ELSE ()
    message(STATUS "cannot recognise os")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
add_library(gloux-network ${gloux-network-files} ${gloux-common-files})
add_library(gloux-io ${gloux-io-files} ${gloux-common-files})
add_executable(gloux-network-test ${gloux-network-files} ${gloux-common-files} tests/network_test.cpp)
add_executable(gloux-io-test ${gloux-io-files} ${gloux-common-files} tests/bytebuffer_test.cpp)
add_executable(gloux-utils-test ${gloux-utils-files} ${gloux-common-files} tests/utils_test.cpp)

target_link_libraries(gloux-network-test gloux-network)